global-store/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: global-store-deployment
  labels:
    name: global-store-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: global-store-deployment
  template:
    metadata:
      labels:
        name: global-store-deployment
    spec:
      containers:
        - image: global-store
          name: global-store
          ports:
            - containerPort: 3008
          imagePullPolicy: Never
